--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@
 @plugin "daisyui";
 
 a.active {
-  @apply bg-amber-100
-  text-blue-500
+  @apply bg-blue-100
+  text-pink-500
   font-semibold
  
 }
