--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,18 @@
 a.active {
   @apply bg-blue-100
   text-pink-500
-  font-semibold
- 
+  font-semibold;
+}
+
+/* @plugin "daisyui/theme" {
+  name: "light";
+  default: true;
+} */
+body.dark {
+  background-color: #1f2937; /* gray-800 */
+  color: #f9fafb; /* gray-50 */
+}
+
+body.dark a.active {
+  @apply bg-blue-700 text-white font-semibold;
 }
